<resources>
    <string name="google_maps_key" translatable="false">AIzaSyCb12op8RHxcSA-xlM_ovNzNZKLlnf-y3w</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="app_name" translatable="false">Real Estate Manager</string>
    <string name="sqm_value">%1$d sq m</string>
    <string name="price_tag">$%1$d</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="action_edit">Edit</string>
    <string name="description">Description</string>
    <string name="surface">Surface</string>
    <string name="rooms_count">%1$d rooms</string>
    <string name="entry_date">Entry date</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="dollarsign" translatable="false">$</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="property_created">Property successfully created.</string>
    <string name="edit_error">Something went wrong. Please make sure that all value entered is valid.</string>
    <string name="apply">Apply</string>
    <string name="price">Price</string>
    <string name="pictures">Pictures</string>
    <string name="agent">Real estate agent</string>
    <string name="sale_date">Sale date</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="all">All</string>
    <string name="reset_filters">Reset all filters</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="type_hint">House, apartment, condo…</string>
    <string name="location_hint">City, neighbourhood…</string>
    <string name="close">Close</string>
    <string name="to">to</string>
    <string name="rooms">Rooms</string>
    <string name="sqm">sq m</string>
    <string name="property_placeholder">Tap a property in the list to show its details here</string>
    <string name="offline_backup">Offline backup</string>
</resources>
