<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#4D000000">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            card_view:cardElevation="5sp"
            card_view:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/pictures_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_prop_height"
                    android:orientation="horizontal">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/property_header_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/property_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_row_text"
                        android:paddingEnd="5dp"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/property_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_row_text"
                        android:paddingStart="5dp"
                        android:layout_gravity="center"
                        android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/property_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_row_text"
                        android:textColor="@color/colorPrimaryDark"/>
                    <TextView
                        android:id="@+id/property_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_row_text"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" 
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:text="Address"/>
                <TextView
                    android:id="@+id/property_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_row_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" 
                    android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/description"/>
            <TextView
                android:id="@+id/property_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_row_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" 
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:text="@string/surface"/>
            <TextView
                android:id="@+id/property_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_row_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" 
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:text="@string/rooms"/>
            <TextView
                android:id="@+id/property_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_row_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" 
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:text="@string/entry_date"/>
                <TextView
                    android:id="@+id/property_entryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_row_text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end">
                <Button
                    android:id="@+id/prop_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EDIT"
                    android:drawableLeft="@drawable/ic_edit"
                    android:drawableTint="#fff"
                    android:textColor="#fff"
                    android:backgroundTint="#1976d2"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>